project/force-app/main/default/objects/Debt__c/Debt__c.object-meta.xml
<CustomObject>
    <label>Debt</label>
    <pluralLabel>Debts</pluralLabel>
    <nameField>
        <label>Debt Name</label>
        <type>AutoNumber</type>
        <displayFormat>DEBT-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>