project/force-app/main/default/objects/Debt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Account_Debts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Thông tin Khách hàng - có External Id trên SAP</description>
</CustomField>