project/force-app/main/default/objects/Debt__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <type>Lookup</type>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Building_Debts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>TTTM - có External Id trên SAP</description>
</CustomField>