project/force-app/main/default/objects/Debt__c/fields/New_Debt__c.field-meta.xml
<CustomField>
    <fullName>New_Debt__c</fullName>
    <label>New Debt</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Nợ mới phát sinh theo kỳ</description>
</CustomField>