project/force-app/main/default/objects/Debt__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Report Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Ngày Báo Cáo Công Nợ</description>
</CustomField>