project/force-app/main/default/objects/Debt__c/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <label>RO</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mặt Bằng Cho Thuê - có External Id trên SAP</description>
</CustomField>