project/force-app/main/default/objects/Debt__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>Total Debt</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Tổng Nợ Theo Hợp Đồng - lấy từ SAP ZRE43B2</description>
</CustomField>